# xmlify

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
bench/: download-bfcl.sh  reporter.ts  run.ts  runner.ts  scorer.test.ts  scorer.ts  types.ts
bench/adapters/: anthropic.ts  google.ts  index.ts  openai.ts  openrouter.ts
bench/suites/: bfcl.ts  loader.ts  sample.ts
python/: pyproject.toml
python/tests/: test_xmlify.py
python/xmlify/: __init__.py  core.py  json_to_xml.py  schema_to_xml.py  types.py  xml_to_json.py
src/: index.ts  json-to-xml.test.ts  json-to-xml.ts  schema-to-xml.test.ts  schema-to-xml.ts  types.ts  wrap.test.ts  wrap.ts  xml-to-json.test.ts  xml-to-json.ts
