[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xmlify-tools"
version = "0.1.0"
description = "Transparent JSON↔XML translation layer for LLM tool calling"
readme = {text = "Transparent JSON↔XML translation layer for LLM tool calling", content-type = "text/plain"}
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["xmlify"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
tau-bench = ["openai>=1.0", "anthropic>=0.30"]
